applications/monitoring/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    homelab.dohrm.fr/tier: platform
